UAT_Backup_All_8Jan2024_0624/Backup-Source/objects/Phoenix_Project__c.object
<CustomObject>
    <fields>
        <fullName>Phoenix_CT_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CT Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Phoenix_Is_Bid_Account__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects / RFPs</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Date_Completed__c</fullName>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Date_Contracts_Received__c</fullName>
        <inlineHelpText>Date Contracts Received Info for Bid Submission</inlineHelpText>
        <label>Date Contracts Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Due_Date_to_Customer__c</fullName>
        <label>Due Date to Customer</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Phoenix_Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Other_Key_Dates_Notes__c</fullName>
        <label>Other Key Dates/Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Sales_Org__c</fullName>
        <label>Sales Org</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rx</fullName>
                </value>
                <value>
                    <fullName>SRx</fullName>
                </value>
                <value>
                    <fullName>OTC</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Sales_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Person</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Status_Comment__c</fullName>
        <label>Status Comment</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Phoenix_Work_Type__c</fullName>
        <label>Work Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Discontinuation</fullName>
                </value>
                <value>
                    <fullName>Functional (Everyday business support)</fullName>
                </value>
                <value>
                    <fullName>Onboarding (non-terms related)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Price Decrease (Mass)</fullName>
                </value>
                <value>
                    <fullName>Price Increase (Mass)</fullName>
                </value>
                <value>
                    <fullName>Product Launch</fullName>
                </value>
                <value>
                    <fullName>Project</fullName>
                </value>
                <value>
                    <fullName>RFP</fullName>
                </value>
                <value>
                    <fullName>Terms &amp; Conditions Review – Existing Customer</fullName>
                </value>
                <value>
                    <fullName>Terms &amp; Conditions Review – New Customer</fullName>
                </value>
                <value>
                    <fullName>Trade Show Payment</fullName>
                </value>
                <value>
                    <fullName>VIP/VIR</fullName>
                </value>
                <value>
                    <fullName>WAC Change</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Not Moving Forward</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Open ~ with DRL Internal</fullName>
                    <default>true</default>
                    <label>Open ~ with DRL Internal</label>
                </value>
                <value>
                    <fullName>Open ~ with External Party</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Project / RFP</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Phoenix_Sales_Org__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>NAME</columns>
        <columns>Phoenix_Work_Type__c</columns>
        <columns>Phoenix_Customer__c</columns>
        <columns>Status__c</columns>
        <columns>Phoenix_Sales_Person__c</columns>
        <columns>Phoenix_CT_Analyst__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Phoenix_Effective_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>contains</operation>
            <value>Completed,Not Moving Forward,On Hold,Open ~ with DRL Internal,Open ~ with External Party</value>
        </filters>
        <filters>
            <field>Phoenix_Sales_Org__c</field>
            <operation>equals</operation>
            <value>Rx,SRx,OTC,All</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Completed_Projects_RFPs</fullName>
        <columns>NAME</columns>
        <columns>Phoenix_Customer__c</columns>
        <columns>Status__c</columns>
        <columns>Phoenix_Sales_Org__c</columns>
        <columns>Phoenix_Sales_Person__c</columns>
        <columns>Phoenix_Work_Type__c</columns>
        <columns>Phoenix_Date_Completed__c</columns>
        <columns>Phoenix_Effective_Date__c</columns>
        <columns>Phoenix_CT_Analyst__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>contains</operation>
            <value>Completed</value>
        </filters>
        <label>Completed Projects / RFPs</label>
    </listViews>
    <listViews>
        <fullName>Not_Moving_Forward_List</fullName>
        <columns>Phoenix_Sales_Org__c</columns>
        <columns>NAME</columns>
        <columns>Phoenix_Work_Type__c</columns>
        <columns>Phoenix_Customer__c</columns>
        <columns>Status__c</columns>
        <columns>Phoenix_Sales_Person__c</columns>
        <columns>Phoenix_CT_Analyst__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>contains</operation>
            <value>Not Moving Forward</value>
        </filters>
        <filters>
            <field>Phoenix_Sales_Org__c</field>
            <operation>equals</operation>
            <value>Rx,SRx,OTC,All</value>
        </filters>
        <label>Not Moving Forward List</label>
    </listViews>
    <listViews>
        <fullName>On_Hold_Projects_RFPs</fullName>
        <columns>NAME</columns>
        <columns>Phoenix_Customer__c</columns>
        <columns>Status__c</columns>
        <columns>Phoenix_Sales_Org__c</columns>
        <columns>Phoenix_Sales_Person__c</columns>
        <columns>Phoenix_Work_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>On Hold</value>
        </filters>
        <label>On Hold Projects / RFPs</label>
    </listViews>
    <listViews>
        <fullName>Open_Projects_RFPs</fullName>
        <columns>NAME</columns>
        <columns>Phoenix_Customer__c</columns>
        <columns>Status__c</columns>
        <columns>Phoenix_Sales_Org__c</columns>
        <columns>Phoenix_Work_Type__c</columns>
        <columns>Phoenix_CT_Analyst__c</columns>
        <columns>Phoenix_Effective_Date__c</columns>
        <columns>Phoenix_Sales_Person__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open ~ with DRL Internal,On Hold,Open ~ with External Party</value>
        </filters>
        <label>Open Projects / RFPs</label>
    </listViews>
    <nameField>
        <label>Project / RFP Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects / RFPs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>